--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
-# Build results 323
+# Build results
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
